# tender_service

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
scripts/: entrypoint.sh
tender_service/: manage.py
tender_service/bids/: admin.py  apps.py  exceptions.py  models.py  permissions.py  serializers.py  urls.py  views.py
tender_service/bids/migrations/: 0001_initial.py  0002_alter_bid_authorid.py
tender_service/core/: apps.py  exceptions.py  pagination.py  views.py
tender_service/organizations/: admin.py  apps.py  exceptions.py  models.py  utils.py
tender_service/organizations/migrations/: 0001_initial.py
tender_service/project/: api_urls.py  asgi.py  settings.py  urls.py  wsgi.py
tender_service/tenders/: admin.py  apps.py  models.py  serializers.py  urls.py  utils.py  views.py
tender_service/tenders/migrations/: 0001_initial.py
